--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section id="container">
         <section id="navbar">
             <div id="logo">
-                <img src="images/logo.png">
+                <img src="images/logo.png" id="logopng">
                 <h1>CRB.ORG</h1>
             </div>
             <div id="links">
@@ -56,19 +56,19 @@
         </div>
         <div id="div4">
             <div id="div3">
-                <img src="images/privacy.png">
+                <img src="images/privacy.png" class="png">
                 <p>Everything you upload is end-to-end</p>
                 <p>encrypted.File contents, files names,folder</p>
                 <p>names,directory structures,etc</p>
             </div>
             <div id="div3">
-                <img src="images/security.png">
+                <img src="images/security.png" class="png">
                 <p>Search your encrypted files securely and</p>
                 <p>privately by name, content, or metadata; all</p>
                 <p>without leaking information</p>
             </div>
             <div id="div3">
-                <img src="images/fingerprint.png">
+                <img src="images/fingerprint.png" class="png">
                 <p>Reclaim your privacy by importing your files</p>
                 <p>from existing cloud storage platforms</p>
                 <p>without revealing them to Stealth or anyone.</p>
@@ -78,7 +78,7 @@
     </section>
     <section id="section1">
         <div id="div6">
-          <img src="images/phone2.png">
+          <img src="images/phone2.png" class="phone2">
         </div>
         <div id="div5">
           <h1 class="text">Expert people </br> <span id="advantage">analytics</span></h1>
@@ -86,10 +86,10 @@
           needed to deliver actionable people metrics, which</br>
           is why equitable offers people analytics services</br>
           combined with an easy to use platform</p>
-          <p><img src="images/tick.png"><b>Get reminded anytime, anywhere</b></p>
-          <p><img src="images/tick.png"><b>Flexible calendar views</b></p>
-          <p><img src="images/tick.png"><b>Collaborating with others</b></p>
-          <p><img src="images/tick.png"><b>Sync across multiple plaforms</b></p>
+          <p><img src="images/tick.png" class="tick"><b>Get reminded anytime, anywhere</b></p>
+          <p><img src="images/tick.png" class="tick"><b>Flexible calendar views</b></p>
+          <p><img src="images/tick.png" class="tick"><b>Collaborating with others</b></p>
+          <p><img src="images/tick.png" class="tick"><b>Sync across multiple plaforms</b></p>
           </br>
           <button id="buttonget">Get Started</button>
         </div>
@@ -102,7 +102,7 @@
          <button id="explore"><b>Explore all integrations</b></button>
         </div>
          <div id="div7">
-         <img src="images/tablet.png">
+         <img src="images/tablet.png" id="tablet">
         </div>
     </section>
     <section id="section3">
@@ -113,7 +113,7 @@
         </div>
     </br>
         <div id="div9">
-            <div>
+            <div id="div17">
                 <img src="images/laptop.webp" class="image">
                 <h2>Encrpted Search</h2>
                 <p>Search your encryted files securely and </br>
@@ -121,7 +121,7 @@
                  without leaking information</p>
                  <button id="input2">Login</button>
             </div>
-            <div>
+            <div id="div17">
                 <img src="images/look.jpg" class="image">
                 <h2>Encrypted </h2>
                 <p>Search your encryted files securely and </br>
@@ -129,7 +129,7 @@
                      without leaking information</p>
                      <button id="input2">Login</button>
             </div>
-            <div>
+            <div id="div17">
                 <img src="images/laptop2.jpg" class="image">
                 <h2>Encrpted Search</h2>
                 <p>Search your encryted files securely and </br>
@@ -162,7 +162,7 @@
     <div id="div13">
             <div id="div15">
                 <div id="logo1">
-                    <img src="images/logo.png">
+                    <img src="images/logo.png" id="logopng2">
                     <h1>CRB.ORG</h1>
                 </div>
                 <h1>Subscribe</h1>
